fix side scroll issue on mobile

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -317,7 +317,7 @@ header .intro-text {
     background: rgba(0, 0, 0, 0.35);
 }
 
-header .container {
+header .headerContainer {
   padding: 0;
 }
 
